change module name
change basic module name from "easysettings" to "easysettings-basic"

--- a/easysettings-dialogs/build.gradle
+++ b/easysettings-dialogs/build.gradle
@@ -22,5 +22,5 @@ android {
 
 dependencies {
     api ('com.afollestad.material-dialogs:core:0.9.6.0')
-    implementation (project(':easysettings'))
+    implementation (project(':easysettings-basic'))
 }
